2010-11-01  Glenn Morris  <rgm@gnu.org>

	* progmodes/ruby-mode.el (ruby-syntax-propertize-heredoc): Declare.

	* textmodes/ispell.el (comment-add): Declare.

	* net/gnutls.el (gnutls-boot, gnutls-errorp, gnutls-error-string):
	Declare.

	* info.el (finder-keywords-hash, package-alist): Declare.

2010-11-01  Chong Yidong  <cyd@stupidchicken.com>

	* finder.el (finder-compile-keywords): Don't use intern-soft,
	since package names may not yet exist in the obarray.

2010-11-01  Chong Yidong  <cyd@stupidchicken.com>

	* vc/vc-arch.el (vc-arch-checkin):
	* vc/vc-cvs.el (vc-cvs-checkin):
	* vc/vc-mtn.el (vc-mtn-checkin):
	* vc/vc-rcs.el (vc-rcs-checkin):
	* vc/vc-sccs.el (vc-sccs-checkin):
	* vc/vc-svn.el (vc-svn-checkin): Remove optional extra arg, unused
	since 2010-04-21 commit by Stefan Monnier.

2010-11-01  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-recompile-file): Fix previous change.

	* startup.el (package-enable-at-startup, package-initialize):
	Silence compiler.

	* progmodes/ada-mode.el (ada-font-lock-syntactic-keywords):
	Silence compiler.

2010-10-31  Julien Danjou  <julien@danjou.info>

	* emacs-lisp/bytecomp.el (byte-recompile-file): New fun (bug#7297).
	(byte-recompile-directory):
	* emacs-lisp/lisp-mode.el (emacs-lisp-byte-compile-and-load):
	Use `byte-recompile-file'.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* cus-start.el: Handle standard values via a keyword.
	Only set version property if specified.
	(cursor-in-non-selected-windows, menu-bar-mode)
	(tool-bar-mode, show-trailing-whitespace):
	Do not specify standard values.
	(transient-mark-mode, temporary-file-directory): Use :standard.

2010-10-31  Jan Djärv  <jan.h.d@swipnet.se>

	* term/x-win.el (x-get-selection-value): New function that gets
	PRIMARY with type as specified in x-select-request-type. (Bug#6802).

2010-10-31  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-file-contents): For root,